--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=BriEmw"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=BriEmw" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=svMBK0"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=svMBK0" type="text/css">
 
   
   
@@ -180,7 +180,7 @@
                 <div class="row align-items-center">
                     <div class="col-12 col-md-3">
                         <div class="image-wrapper">
-                            <img src="assets/images/foto-de-sebastin-5.jpg-838x1117.jpeg" alt="">
+                            <img src="assets/images/whatsapp-image-2025-10-19-at-7.45.52-pm.jpeg-1-838x1117.jpeg" alt="">
                         </div>
                     </div>
                     <div class="col-12 col-md">
